fix Adjusted padding and spacing so contents fits better in all assigned views

--- a/src/main/resources/style/endgameTheme.css
+++ b/src/main/resources/style/endgameTheme.css
@@ -4,9 +4,11 @@
  */
 
 .root {
-    -fx-background-color: #1e2b36;
-    -fx-padding: 20px;
-    -fx-spacing: 10px;
+    -fx-background-color: linear-gradient(to bottom right, #1A2980, #26D0CE);
+}
+
+.container {
+    -fx-padding: 140px 220px;
     -fx-alignment: center;
 }
 
@@ -35,4 +37,5 @@ Button {
 
 .HBoxSpacing {
     -fx-spacing: 10px;
+    -fx-alignment: center;
 }
