--- a/src/main/resources/style/gameTheme.css
+++ b/src/main/resources/style/gameTheme.css
@@ -4,8 +4,11 @@
  */
 
 .root {
-    -fx-background-color: #1e2b36;
-    -fx-padding: 20px;
+    -fx-background-color: linear-gradient(to bottom right, #1A2980, #26D0CE);
+}
+
+.container {
+    -fx-padding: 20px 28px;
     -fx-spacing: 10px;
 }
 
@@ -31,6 +34,10 @@
 
 Slider {
     -fx-scale-x: 0.9px;
+}
+
+.rightshift {
+    -fx-alignment: center right;
 }
 
 Button {
