--- a/src/main/resources/style/theme.css
+++ b/src/main/resources/style/theme.css
@@ -4,7 +4,7 @@
  */
 
 .root {
-    -fx-background-color: #1e2b36;
+    -fx-background-color: linear-gradient(to bottom right, #1A2980, #26D0CE);
     -fx-padding: 20px;
     -fx-spacing: 10px;
 }
